[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "gait-ai"
version = "0.0.8"
description = "GAIT: git-like versioning for AI turns, commits, and context"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [{ name = "John Capobianco" }]

keywords = ["git", "ai", "llm", "versioning", "cli", "mlops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "tiktoken>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/automateyournetwork/gait"
Repository = "https://github.com/automateyournetwork/gait"
Issues = "https://github.com/automateyournetwork/gait/issues"

[project.scripts]
gait = "gait.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gait"]
